--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app1.js",
-    "start-server":"node app1.js"
+    "start": "nodemon app1.js",
+    "start-server": "node app1.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,8 @@
     "url": "https://github.com/mukut-d/nodejs_udemy/issues"
   },
   "homepage": "https://github.com/mukut-d/nodejs_udemy#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
